@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.5-4
-Date: 2022-12-01
+Date: 2022-12-17
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Matrix-authors@R-project.org
